Heading elements moved to one line

--- a/test.html
+++ b/test.html
@@ -6,12 +6,8 @@
     <title>Sakhile Mamba | CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1>
-        Sakhile Mamba | CSE 121B | BYU-Idaho
-    </h1>
-    <h2>
-        Eswatini
-    </h2>
+    <h1> Sakhile Mamba | CSE 121B | BYU-Idaho</h1>
+    <h2>Eswatini</h2>
     <hr>
     
 </body>
